browser: push answer anchor divs up to account for fixed navbar
This enables us to link directly to an answer (from a snippet) without the top of that answer being hidden under the navbar.
Note: we use $uiViewScroll defined in appRouting.js for scrolling to the anchor

--- a/appserver/java-spring/static/app/styles/style.css
+++ b/appserver/java-spring/static/app/styles/style.css
@@ -4993,7 +4993,11 @@ h1 {
 
 /* answers */
 .ss-answer-wrapper {
-  padding-top: 14px; }
+  padding-top: 14px;
+  /* push answer anchors up to account for fixed navbar */ }
+  .ss-answer-wrapper .ss-answer-anchor {
+    position: relative;
+    top: -70px; }
   .ss-answer-wrapper .ss-answer-vote {
     padding-top: 6px; }
   .ss-answer-wrapper .ss-answer-inner {
